<resources>
    <string name="app_name">CovidAPP</string>
    <string name="logo">Logo </string>
    <string name="numero_de_casos">Numero de casos atualizado COVID</string>
    <string name="info_sintomas">Sintomas da COVID</string>
    <string name="info_previnir">Como previnir a COVID</string>
    <string name="noticia">Noticia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="p_gina_inicial">Página Inicial</string>
    <string name="conta">Conta</string>
    <string name="animes">Animes</string>
    <string name="lista_de_animes">Lista de Animes</string>
    <string name="favoritos">Favoritos</string>
    <string name="hist_rico">Histórico</string>
    <string name="outros">Outros</string>
    <string name="configura_es">Configurações</string>
    <string name="compartilhe">Compartilhe</string>
    <string name="imagem">Imagem</string>
    <string name="fa_a_o_login">Faça o Login</string>
    <string name="ltimas_noticias_sobre_covid">Últimas noticias sobre a COVID 19</string>
    <string name="entrar">Entrar</string>
    <string name="registre_se">Registre-se</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="foto_do_usu_rio">foto do usuário</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar">Registrar</string>
    <string name="registro_usuario">Registro de usuário</string>
    <string name="registro">Registro</string>
    <string name="registro_de_usu_rio">Registro de usuário</string>
    <string name="share">Compartilhe o app</string>
    <string name="contamins">Numero de contaminações</string>
    <string name="description_contamins">Aproximadamente 626 milhôes de casos</string>
    <string name="contamin_reg">Contaminações por região no Brasil</string>
    <string name="reg_sul">Região Sul</string>
    <string name="reg_sudeste">Região Sudeste</string>
    <string name="reg_co">Região Centro Oeste</string>
    <string name="reg_norte">Região Norte</string>
    <string name="reg_nordeste">Região Nordeste</string>
    <string name="clique_aqui_para_info">Clique aqui para mais informações</string>
    <string name="sintomas">Sintomas do COVID</string>
    <string name="description_sintomas">Sintomas mais comuns: Febre, Tosse, Cansaço, Perda de paladar ou olfato. Sintomas menos comuns: Dores de garganta, Dor de cabeça, Dores e desconfortos, Diarreia, Olhos vermelhos ou irritados, Sintomas graves: Dificuldade para respirar ou falta de ar, Perda da fala, mobilidade ou confusão, Dores no peito</string>
    <string name="prevencao">Como previnir a COVID</string>
    <string name="description_prevencao">Lave bem as mãos e com frequência, usando álcool em gel ou água e sabão. Mantenha uma distância mínima de 1 metro entre você e qualquer pessoa que tosse ou espirra. Evite tocar nos olhos, nariz e boca.  Você e as pessoas ao seu redor devem manter uma boa higiene das vias aéreas. Isso significa cobrir a boca e o nariz com o cotovelo dobrado ou com um lenço de papel quando tossir ou espirrar. O lenço usado deve ser descartado imediatamente. Fique em casa se não estiver bem. Se você tiver febre, tosse e falta de ar, procure atendimento médico e ligue com antecedência para o posto de saúde, UPA ou pronto-socorro. Se possivel fique em casa.</string>
    <string name="Page_covid">Sobre o Covid</string>
    <string name="description_covid">Em 31 de dezembro de 2019, a Organização Mundial da Saúde (OMS) foi alertada sobre vários casos de pneumonia na cidade de Wuhan, província de Hubei, na República Popular da China. Tratava-se de uma nova cepa (tipo) de coronavírus que não havia sido identificada antes em seres humanos.Uma semana depois, em 7 de janeiro de 2020, as autoridades chinesas confirmaram que haviam identificado um novo tipo de coronavírus. Os coronavírus estão por toda parte. Eles são a segunda principal causa de resfriado comum (após rinovírus) e, até as últimas décadas, raramente causavam doenças mais graves em humanos do que o resfriado comum.Em 30 de janeiro de 2020, a OMS declarou que o surto do novo coronavírus constitui uma Emergência de Saúde Pública de Importância Internacional (ESPII) – o mais alto nível de alerta da Organização, conforme previsto no Regulamento Sanitário Internacional. Essa decisão buscou aprimorar a coordenação, a cooperação e a solidariedade global para interromper a propagação do vírus.. Essa decisão aprimora a coordenação, a cooperação e a solidariedade global para interromper a propagação do vírus.</string>
    <string name="localiza">Localização</string>
    <string name="lembrar">lembrar</string>
    <string name="ou">ou</string>

</resources>