<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:id="@+id/activityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            android:textColor="@color/text"
            android:elevation="4dp"
            tools:targetApi="lollipop">

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/background"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10sp"
                    android:id="@+id/num_casos"
                    android:text="@string/numero_de_casos"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/ltimas_noticias_sobre_covid"
                    android:textAllCaps="true"
                    android:id="@+id/covid"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="351dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/info_sintomas"
                    android:textAllCaps="true"
                    android:id="@+id/sintomas_cov"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="348dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/info_previnir"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:id="@+id/preven"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        myapp:headerLayout="@layout/nav_header"
        myapp:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>